<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/subMenu" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_attendees"
            android:icon="@drawable/ic_attendees"
            android:title="@string/attendees" />

        <item
            android:id="@+id/nav_tickets"
            android:icon="@drawable/ic_ticket"
            android:title="@string/tickets" />

        <item
            android:id="@+id/nav_about_event"
            android:icon="@drawable/ic_info"
            android:title="@string/about"
            android:checkable="false"/>

        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_feedback"
            android:title="@string/feedback" />

        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/ic_faq"
            android:title="@string/faq"/>

        <item
            android:id="@+id/nav_track"
            android:icon="@drawable/ic_event_note"
            android:title="@string/tracks"/>

        <item
            android:id="@+id/nav_sponsor"
            android:icon="@drawable/ic_sponsors"
            android:title="@string/sponsors"/>

    </group>

    <group android:id="@+id/eventsMenu" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_events"
            android:title="@string/events" />
    </group>

    <group android:id="@+id/mainMenu">

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings"
            android:checkable="true"/>

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/log_out" />

    </group>

</menu>
